integration-tests/tests/integration/snapshots/integration__rustc_vv_non_zero_warning.snap
---
source: integration-tests/tests/integration/main.rs
expression: command.unchecked(true).output().to_snapshot()
snapshot_kind: text
---
exit status|code: Some(0)
--- stdout ---
host triple: x86_64-unknown-linux-gnu
target triple: (none)


--- stderr ---
warning: for host platform, `rustc -vV` failed with exit status|code: 1; falling back to build target `x86_64-unknown-linux-gnu`
- `rustc -vV` stdout:
  failure output to stdout

- `rustc -vV` stderr:
  failure output to stderr
